--- a/components/navBarSticky.html
+++ b/components/navBarSticky.html
@@ -1,36 +1,56 @@
-<div id="navbarSticky">
-  <nav class="nav">
-    <img class="nav-title" src="/experiments/assets/talabat.png" />
-    <div class="nav-search">
-      <nav class="navbar">
-        <div class="container-fluid">
-          <form class="d-flex" role="search">
-            <input
-              class="form-control"
-              type="search"
-              placeholder="Start your job search here"
-              aria-label="Search"
-            />
-            <button class="btn btn-search" type="submit">
-              <img
-                class="search-icon"
-                src="/experiments/assets/icons8-search-50.png"
-              />
-            </button>
-          </form>
-        </div>
-      </nav>
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+  <div class="container-fluid">
+    <div class="dropdown">
+      <a class="navbar-brand dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">RIOT GAMES</a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li>
+          <hr class="dropdown-divider" />
+        </li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
     </div>
-    <div class="nav-saved">
-      <p class="saved-p">Saved jobs</p>
-      <div class="saved-img"></div>
-    </div>
-  </nav>
+    <a class="navbar-brand" href="#">SUPPORT</a>
+    <a class="navbar-brand" href="#">L</a>
+    <a class="navbar-brand" href="#">|</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">OUR GAMES</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">SUBMIT A TICKET</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#">MY TICKETS</a>
+        </li>
 
-  <div class="nav-tabs">
-    <div class="tab1">How we hire</div>
-    <div class="tab1">Life at talabat</div>
-    <div class="tab1 loTab">Locations</div>
-    <div class="tab1">Our Jobs</div>
+        <li class="nav-item">
+          <a class="nav-link active" href="#">SERVICE STATUS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#">BANS AND REPORTS</a>
+        </li>
+      </ul>
+
+      <div class="erm">
+        <button class="btn btn-secondary" type="button" data-i18n="signNav">SIGN IN</button>
+      </div>
+    </div>
   </div>
-</div>
+</nav>
