--- a/main.css
+++ b/main.css
@@ -1,12 +1,15 @@
 .langBtn {
     color: red !important;
     font-size: 1rem;
+    position: absolute;
+    top: 1.4%;
+    right: 7%;
 }
 
 
 /* ////////////////////////////////////// */
 /* ////////////////////////////////////// */
-/* ////////////////////////////////////// */
+/* ///////////  Supp Tools  ///////////// */
 
 .blackBg {
     background-color: rgb(5,5,5);
@@ -245,11 +248,8 @@ ion-icon {
   background-color: #f5f5f5;
   color: #888;
   font-size: 0.8rem;
-  /* padding: 1rem; */
-  /* padding-bottom: 1px !important; */
   line-height: 1.3;
   display: flex;
-  /* gap: 1.2rem; */
 }
 
 .discP {
@@ -265,7 +265,6 @@ ion-icon {
     justify-content: center;
     width: 12rem;
     font-weight: 600;
-    /* padding-right: 1rem; */
     cursor: pointer;
 }
 
@@ -337,7 +336,7 @@ ion-icon {
 
 /* //////////////////////////////////////////////////// */
 /* //////////////////////////////////////////////////// */
-/* //////////////////////  TEST   ///////////////////// */
+/* //////////////////    HERO TEST    ///////////////// */
 
 .containerTEST {
   position: relative;
